--- a/index.html
+++ b/index.html
@@ -7,48 +7,33 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $.ajax({
-        url: "https://jsonplaceholder.typicode.com/users",
-        context: document.body,
-        beforeSend: function () {
-          $("#loaderDiv").show();
-        },
-        success: function (result) {
-          $("#loaderDiv").hide();
-          $.each(result, (index, user) => {
-            $('#cardsContainer').append(`
-              <div class="card-wrapper">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg" alt="sample87" />
-                <div class="card-details">
-                  <img src="https://d2jyir0m79gs60.cloudfront.net/prime/tutor-video-m.svg" alt="profile-sample4"
-                    class="profile" />
-                  <h2>${user.name}<span>${user.company.name}</span></h2>
-                  <ul>
-                    <li>Email: <a href="mailto:${user.email}">${user.email}</a></li>
-                    <li>Phone: <a href="tel:${user.phone}">${user.phone}</a></li>
-                    <li>Website: <a href=${user.website}>${user.website}</a></li>
-                    <li>Address: ${user.address.street}, ${user.address.suite}</li>
-                  </ul>
-                </div>
-              </div>
-            `)
-          });
-        }
-      });
-    });
-  </script>
+  <script src="javascript.js"></script>
 </head>
 
 <body>
   <div class="page-container">
-      <div class="page-title">
-        <h2>Javascript Assessment</h2>
-        <button id="addUser">Add User</button>
-        <div>Sorting Options</div>
-      </div>
+    <div class="page-title">
+      <h2>Javascript Assessment</h2>
+      <button id="addUser">Add User</button>
+      <div>Sorting Options</div>
+    </div>
     <div id="cardsContainer"></div>
+    
+  </div>
+  
+  <!-- Add User Modal -->
+  <div id="newUserModal" class="modal-container">
+    <div class="content-wrapper">
+      <form>
+        <h3>Add New User</h3>
+        <div id="closeModal" class="close-btn">&#10005;</div>
+        <input type="text" name="name" placeholder="Enter your full name">
+        <input type="text" name="username" placeholder="Enter your user name">
+        <input type="email" name="email" placeholder="Enter your email">
+        <input type="tel" name="phone" placeholder="Enter your phone number">
+        <input type="text" name="website" placeholder="Enter your website link">
+      </form>
+    </div>
   </div>
 </body>
 
