added filters to sort data

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <div class="page-title">
       <h2>Javascript Assessment</h2>
       <button id="addUser">Add User</button>
-      <div>Sorting Options</div>
+      <select id="sortOrder">
+        <option value="desc">Desc</option>
+        <option value="asc">Asc</option>
+      </select>
+      <select id="sortOPt">
+        <option value="lastname">By Last Name</option>
+        <option value="zip">By Zip Code</option>
+      </select>
     </div>
     <div id="cardsContainer"></div>
     
@@ -24,7 +31,7 @@
   <!-- Add User Modal -->
   <div id="newUserModal" class="modal-container">
     <div class="content-wrapper">
-      <form>
+      <div id="userForm" >
         <h3>Add New User</h3>
         <div id="closeModal" class="close-btn">&#10005;</div>
         <input type="text" name="name" placeholder="Enter your full name">
@@ -32,7 +39,14 @@
         <input type="email" name="email" placeholder="Enter your email">
         <input type="tel" name="phone" placeholder="Enter your phone number">
         <input type="text" name="website" placeholder="Enter your website link">
-      </form>
+        <label>Company Details</label>
+        <input type="text" name="companyName" placeholder="Enter your company name">
+        <input type="text" name="zipCode" placeholder="Enter your zip name">
+        <label>Address</label>
+        <input type="text" name="addSuit" placeholder="Suit">
+        <input type="text" name="addStreet" placeholder="Street">
+        <button id="submitData" >Add User</button>
+      </div>
     </div>
   </div>
 </body>
